--- a/packages/backend/src/server/web/views/bios.pug
+++ b/packages/backend/src/server/web/views/bios.pug
@@ -13,7 +13,7 @@ html
 
 	body
 		header
-			h1 CherryPick Repair Tool #{version}
+			h1 Re:Lovers Repair Tool #{version}
 		main
 			div.tabs
 				button#ls edit local storage
